--- a/control
+++ b/control
@@ -1,12 +1,15 @@
 {
  
- "INPUT":[""],
- "REFERENCE":[""],
- "DYNAMIC":[""],
- "ERROR":[""],
- "OUTPUT":[""],
- "DELAY":[""],
- "INTEGRATOR":[""],
- "CONTROLLER":[""],
- "OBSERVER":[""]
+ "INPUT":["ID","ID",".."],
+ "OUTPUT":["ID","ID",".."],
+ "REFERENCE":["ID",""],
+ "MODEL":["ID",""],
+ "ERROR":["ID",""],
+ "OUTPUT":["ID",""],
+ "DELAY":["ID",""],
+ "INTEGRATOR":["ID",""],
+ "CONTROLLER":["ID",""],
+ "OBSERVER":["ID"],
+ "WAY":["ID"],
+ "DISTURB":["ID"],
 }
